# tauri-auth0-example

./: .gitignore  README.md  index.html  package.json
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth_service.rs  lib.rs  main.rs
