[package]
name = "tauri-auth0-example"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_auth0_example_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0.97"
oauth2 = "5.0.0"
open = "5.3.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-oauth = "2.0.0"
tauri-plugin-opener = "2.2.6"
tokio = { version = "1.44.0", features = ["full"] }
url = "2.5.4"
